--- a/style.css
+++ b/style.css
@@ -1,14 +1,19 @@
 html {
-  height: calc(100% - 150px);
+  height: calc(100% - 175px);
   display: table;
   margin: auto;
 }
 body {
-  background-color: #cccccc;
+  position: fixed;
+  background-color: #d2d2d2;
+  margin-top: 300px;
+  margin-left: -345px;
+  margin-right: auto;
+  margin-bottom: auto;
   width: 100%;
   height: 100%;
   display: table-cell;
-  vertical-align: middle;
+  vertical-align: top;
 }
 /* py-terminal {
   position: absolute;
@@ -20,12 +25,12 @@ body {
   scroll-behavior: auto;
   background: black;
 } */
-/* py-terminal::-webkit-scrollbar-track {
-  background: #888888;
+py-terminal::-webkit-scrollbar-track {
+  background: #ffffff;
 }
 py-terminal::-webkit-scrollbar-thumb {
-  background: #aaaaaa; 
+  background: #ffffff; 
 }
 py-terminal::-webkit-scrollbar {
   width: 15px;
-} */
+}
